examples/ingress/aws/grpc_api_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc-ingress
  namespace: spaceone
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/backend-protocol-version: GRPC
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/inbound-cidrs: 0.0.0.0/0
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:..."  # Change the certificate-arn
    alb.ingress.kubernetes.io/load-balancer-name: spaceone-grpc-ingress # Caution!! Must be fewer than 32 characters.
    external-dns.alpha.kubernetes.io/hostname: "*.grpc.example.com"  # Change the hostname
spec:
  ingressClassName: alb
  rules:
    - host: identity.grpc.example.com  # Change the hostname
      http:
        paths:
          - backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
            path: /*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: identity
                port:
                  number: 50051
            path: /*
            pathType: ImplementationSpecific
    - host: inventory.grpc.example.com  # Change the hostname
      http:
        paths:
          - backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
            path: /*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: inventory
                port:
                  number: 50051
            path: /*
            pathType: ImplementationSpecific
    - host: repository.grpc.example.com  # Change the hostname
      http:
        paths:
          - backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
            path: /*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: repository
                port:
                  number: 50051
            path: /*
            pathType: ImplementationSpecific
    - host: monitoring.grpc.example.com  # Change the hostname
      http:
        paths:
          - backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
            path: /*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: monitoring
                port:
                  number: 50051
            path: /*
            pathType: ImplementationSpecific
    - host: config.grpc.example.com  # Change the hostname
      http:
        paths:
          - backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
            path: /*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: config
                port:
                  number: 50051
            path: /*
            pathType: ImplementationSpecific
    - host: plugin.grpc.example.com  # Change the hostname
      http:
        paths:
          - backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
            path: /*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: plugin
                port:
                  number: 50051
            path: /*
            pathType: ImplementationSpecific
    - host: statistics.grpc.example.com  # Change the hostname
      http:
        paths:
          - backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
            path: /*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: statistics
                port:
                  number: 50051
            path: /*
            pathType: ImplementationSpecific
    - host: notification.grpc.example.com  # Change the hostname
      http:
        paths:
          - backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
            path: /*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: notification
                port:
                  number: 50051
            path: /*
            pathType: ImplementationSpecific
    - host: cost-analysis.grpc.example.com  # Change the hostname
      http:
        paths:
          - backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
            path: /*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: cost-analysis
                port:
                  number: 50051
            path: /*
            pathType: ImplementationSpecific
    - host: board.grpc.example.com  # Change the hostname
      http:
        paths:
          - backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
            path: /*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: board
                port:
                  number: 50051
            path: /*
            pathType: ImplementationSpecific
    - host: dashboard.grpc.example.com  # Change the hostname
      http:
        paths:
          - backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
            path: /*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: dashboard
                port:
                  number: 50051
            path: /*
            pathType: ImplementationSpecific
